Spacing Fixing

--- a/main.css
+++ b/main.css
@@ -269,7 +269,7 @@ label{
 
 
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 516px) {
     .header{
         /* background-color: blue; */
         padding: 0.4rem 1rem;
@@ -311,7 +311,7 @@ label{
     .body .left span h1{
         font-size: 5rem;
         text-align: center;
-        margin-bottom: 22gitvh;
+        margin-bottom: 22vh;
     }
     .body .left span h3{
         font-size: 3rem;
